--- a/src/assets/styles/Home/searchbar.scss
+++ b/src/assets/styles/Home/searchbar.scss
@@ -1,11 +1,6 @@
 #searchbar{
-    grid-column-start: 3;
-    grid-column-end: 4;
 
-    grid-row-start: 2;
-    grid-row-end: 3;
-    justify-items: center;
-    margin: 0.4em 0;
+    margin: 1.2em 0;
 
    
 
@@ -29,7 +24,7 @@
         outline: none;
 
         &:focus{
-            border: 2px solid $primary-color;
+            border: none;
             &::placeholder{
                 color: $primary-color;
             }
