--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -3,4 +3,7 @@ $inactive-color: #5a5a5a;
 $primary-color: #59914C;
 $accent-color: #cd8e48;
 $caption-color: #57804f;
-$darker-primary: #44743b
+$darker-primary: #44743b;
+$black-text: rgb(31, 31, 31);
+$red-color: rgb(194, 79, 79);
+$card-hover-color: rgb(247, 247, 247);
