added tabs , cart and design fixes

--- a/src/assets/styles/Home/filter.css
+++ b/src/assets/styles/Home/filter.css
@@ -13,6 +13,7 @@
   width: 6em;
   color: #5a5a5a;
   padding: 0.4em;
+  transition: all 0.3s ease-in-out;
 }
 .filter section .filter-area h6 {
   font-weight: normal;
