--- a/src/assets/styles/Home/filter.scss
+++ b/src/assets/styles/Home/filter.scss
@@ -22,6 +22,8 @@
         width: 6em;
         color: $inactive-color;
         padding: 0.4em;
+        transition: all 0.3s ease-in-out ;
+
 
         h6{
             font-weight: normal;
